# Agents

./: crag.ipynb  pyproject.toml  requirements.txt  retrieval_evaluator.ipynb  retrieval_refinement.ipynb  web_search.ipynb
1-Basic_chatbot/: 1-basicchatbot.ipynb
langgraph_workfloeMethods/: rag_langgraph.ipynb
rag_types_langgraph/: corrective_rag.ipynb
