[project]
name = "agentic-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "notebook>=7.5.7",
    "python-dotenv>=1.2.2",
]
